# betterquesting_report

./: Cargo.toml  README.md  Rocket.toml
.github/workflows/: codecoverage.yml  main.yml
benches/: bench.rs
sample/1/: NameCache.json  QuestProgress.json  QuestingParties.json
src/: lib.rs  main.rs
src/parsers/: mod.rs  name_cache.rs  quest_database.rs  quest_progress.rs  questing_parties.rs
templates/: index.html.tera  quest.html.tera  quests_history.html.tera
