[package]
name = "betterquesting_report"
version = "0.1.0"
authors = ["J2ghz <j2.00ghz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.9"
rocket_contrib = {version = "0.4.6", features = ["handlebars_templates", "tera_templates"]}
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false